# indigent

./: .gitignore  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  update-env.sh
src/indigent/: __init__.py  _null_file.py  console.py
